--- a/dialog_stablemaster.yml
+++ b/dialog_stablemaster.yml
@@ -21,10 +21,10 @@ dialogs:
         requirements:
             - quest intro hay
         script:
-            - 0 out stablemaster_hello 'Hello there, what can I do for you?'
-            - 40 out me 'The innkeeper asked me to get some hay for him'
-            - 40 out stablemaster_hay 'alright he'll pay for it later, here you go'
-            - 40 out me 'thank you very much'
+            - '0 out stablemaster_hello Hello there, what can I do for you?'
+            - '40 player The innkeeper asked me to get some hay for him'
+            - '40 out stablemaster_hay alright he'll pay for it later, here you go'
+            - '40 player thank you very much'
             - 5 item add hay_block 1
     hello2:
         script:
@@ -32,13 +32,13 @@ dialogs:
             - option day
     response_good:
         script:
-            - 0 out me '&2I'm good thank you for asking, how are you?'
+            - '0 player &2I'm good thank you for asking, how are you?'
             - 40 out stablemaster_good thats good to hear dear boy, im good aswell
             - 40 out stablemaster_busy I sadly have no time right now to continue this conversation
             - 40 out stablemaster_bye I hope you have a good day
     response_bad:
         script:
-            - 0 out me '&2I'm not that doing so well actually'
+            - '0 player &2I'm not that doing so well actually'
             - 40 out stablemaster_bad thats too bad
             - 40 out steblemaster_busy2 im sorry but im too busy to hear about your troubles at the moment
             - 40 out stablemaster_bye2 I hope you feel better soon
