--- a/dialog/dialog_innkeeper.yml
+++ b/dialog/dialog_innkeeper.yml
@@ -12,7 +12,7 @@ click:
 
 options:
     payment:
-        NoMoney:
+        no_money:
             display: '&4no money.'
             dialog: response_nice
         why:
@@ -28,29 +28,29 @@ options:
 dialogs:
     quest_trigger:
         requirements:
-            - flag InnkeeperConverstion == 0
+            - flag innkeeper_converstion == 0
         script:
-            - 0 flag innkeeperConverstion add 1
-            - 0 out innkeeper_awake Glad your finnaly awake, 
-            - 20 out innkeeper_brought_in a fisherman from the town to the southeast of us brought you in a couple of days ago.
-            - 20 out innkeeper_repaid After you have repaid me for the room you used, you should go and see him.
+            - 0 flag innkeeper_converstion add 1
+            - '0 out innkeeper_awake Glad your finnaly awake,'
+            - '20 out innkeeper_brought_in a fisherman from the town to the southeast of us brought you in a couple of days ago.'
+            - '20 out innkeeper_repaid After you have repaid me for the room you used, you should go and see him.'
             - 0 option payment
     response_nice:
         script:
-            - 0 out me 'But I have no money'
-            - 40 out innkeeper_start_quest Thats alright the room wasn't that expensive anyway.
-            - 40 out innkeeper_start_quest2 If you fetch me some hay, you're free to go.
+            - '0 me But I have no money'
+            - '40 out innkeeper_start_quest Thats alright the room wasn''t that expensive anyway.'
+            - '40 out innkeeper_start_quest2 If you fetch me some hay, you're free to go.'
             - 5 quest intro hay
     response_explain:
         script:
-            - 0 out me 'Why would I have to pay you?'
-            - 40 out innkeeper_explain You didn't think I would let you stay for free did you?
+            - '0 me Why would I have to pay you?'
+            - '40 out innkeeper_explain You didn''t think I would let you stay for free did you?'
             - 0 option payment2
     response_mean:
         script:
-            - 0 out me '&4This is rediculous! I didn't choose to stay here so why should I pay?'
+            - '0  me &4This is rediculous! I didn''t choose to stay here so why should I pay?'
             - 0 flag innkeeper_dislike add 1
-            - 40 out Innkeeper_response_mean you wouldn't need that much to pay me anyway, since I stuffed you in the cheapest room I have. And now go fetch me some hay, I'm not going to let you leave without payment.
+            - '40 out Innkeeper_response_mean you wouldn''t need that much to pay me anyway, since I stuffed you in the cheapest room I have. And now go fetch me some hay, I'm not going to let you leave without payment.'
             - 5 quest intro hay
     quest_has_hay_nice:
         requirements:
@@ -58,9 +58,9 @@ dialogs:
             - item hay_block
             - flag innkeeper_dislike == 0
         script:
-            - 0 out innkeeper_hayblock thank you for the hay.
-            - 40 out innkeeper_gear you should get some starter gear before leaving town
-            - 40 out innkeeper_send the blacksmith might have some if you mention that I send you.
+            - '0 out innkeeper_hayblock thank you for the hay.'
+            - '40 out innkeeper_gear you should get some starter gear before leaving town'
+            - '40 out innkeeper_send the blacksmith might have some if you mention that I send you.'
             - 5 quest intro gear
     quest_has_hay_mean:
         requirements:
@@ -68,11 +68,11 @@ dialogs:
             - item hay_block
             - flag innkeeper_dislike == 1
         script:
-            - 0 out innkeeper_hay_mean Good you actually did what I told you
-            - 40 out innkeeper_gear_mean Go to the blacksmith to get some gear. Unless you would like to die of course
+            - '0 out innkeeper_hay_mean Good you actually did what I told you'
+            - '40 out innkeeper_gear_mean Go to the blacksmith to get some gear. Unless you would like to die of course'
             - 5 quest intro gear
     quest_no_has_hay:
         requirements:
-            quest intro hay
+            - quest intro hay
         script:
-            - 0 out Innkeeper_no_hay You can get some hay from the stable, it shouldn't be that hard to find. And now go I have other matters to attend too.
+            - '0 out innkeeper_no_hay You can get some hay from the stable, it shouldn't be that hard to find. And now go I have other matters to attend too.'
