--- a/config/items.yml
+++ b/config/items.yml
@@ -1,9 +1,10 @@
+
 evagarna:
     name: '&cEvagarna'
     type: IRON_SWORD
     data: 2
     level: 8
-    tier: CRAFTED
+    tier: crafted
     lore:
     - '&2The <name> is a very rare sword that deals massive amounts of damage.'
     - '&2There are many who fear its existence, for good reason.'
@@ -13,11 +14,177 @@ goliath:
     type: DIAMOND_SWORD
     data: 2
     level: 16
-    tier: LEGENDARY
-    enchantments:
-        FIRE_ASPECT: 1
-        KNOCKBACK: 1
-        DURABILITY: 2
+    tier: legendary
     lore:
     - '&4There''s no sword quite like it, it''s just amazingly good at what it does:'
     - '&4Killing people'
+
+joe_amulet:
+    name: '&5Amulet of Strength'
+    type: BLAZE_ROD
+    level: 2
+    lore:
+    - '&6Farmer Joe gave me this Amulet. He told me it was once his mother''s.'
+    - '&6I should probably wear it with pride.'
+# Armour  
+# lvls 1-3
+#    
+old_hat:
+    name: 'Old Hat'
+    type: LEATHER_HELMET
+    data: 0
+    level: 1
+    tier: BATTERED
+ragged_shirt:
+    name: 'Ragged Shirt'
+    type: LEATHER_CHESTPLATE
+    data: 0
+    level: 3
+    tier: BATTERED
+shabby_pants:
+    name: 'Shabby Pants'
+    type: LEATHER_LEGGINS
+    data: 0
+    level: 1
+    tier: BATTERED
+shady_boots:
+    name: 'Shady Boots'
+    type: LEATHER_BOOTS
+    data: 0
+    level: 2
+    tier: BATTERED
+# Armour
+# lvls 4-6
+#
+light_leather_helmet_4:
+    name: 'Light Leather Helmet'
+    type: LEATHER_HELMET
+    data: 0
+    level: 4
+    tier: NORMAL
+light_leather_chestplate_4:
+    name: 'Light Leather Chestplate'
+    type: LEATHER_CHESTPLATE
+    data: 0
+    level: 4
+    tier: NORMAL
+light_leather_leggins_4:
+    name: 'Light Leather Pants'
+    type: LEATHER_LEGGINS
+    data: 0
+    level: 4
+    tier: NORMAL
+light_leather_boots_4:
+    name: 'Shady Boots'
+    type: LEATHER_BOOTS
+    data: 0
+    level: 4
+    tier: NORMAL
+# Armour
+# lvls 7-9
+#
+light_leather_helmet_7:
+    name: 'Light Leather Helmet'
+    type: LEATHER_HELMET
+    data: 0
+    level: 7
+    tier: NORMAL
+light_leather_chestplate_7:
+    name: 'Light Leather Chestplate'
+    type: LEATHER_CHESTPLATE
+    data: 0
+    level: 7
+    tier: NORMAL
+light_leather_leggins_7:
+    name: 'Light Leather Pants'
+    type: LEATHER_LEGGINS
+    data: 0
+    level: 7
+    tier: NORMAL
+light_leather_boots_7:
+    name: 'Shady Boots'
+    type: LEATHER_BOOTS
+    data: 0
+    level: 7
+    tier: NORMAL
+# Weapons
+# lvls 1-3
+#
+blunt_sword:
+    name: 'Blunt Sword'
+    type: WOODEN_SWORD
+    data: 0
+    level: 1
+    tier: BATTERED
+stick_and_string:
+    name: 'Stick And Sting'
+    type: BOW
+    data: 0
+    level: 1
+    tier: BATTERED
+kitchen_knife:
+    name: 'Kitchen Knife'
+    type: SCHEARS
+    data: 0
+    level: 1
+    tier: BATTERED
+pointy_stick:
+    name: 'Pointy Stick'
+    type: STICK
+    data: 0
+    level: 1
+    tier: BATTERED
+# Weapons
+# lvls 4-6
+#
+wooden_sword_4:
+    name: 'Wooden Sword'
+    type: WOODEN_SWORD
+    data: 0
+    level: 4
+    tier: NORMAL
+short_bow_4:
+    name: 'Short Bow'
+    type: BOW
+    data: 0
+    level: 4
+    tier: NORMAL
+wooden_knife_4:
+    name: 'Wooden Knife'
+    type: SCHEARS
+    data: 0
+    level: 4
+    tier: NORMAL
+wood_wand_4:
+    name: 'Wood Wand'
+    type: STICK
+    data: 0
+    level: 4
+    tier: NORMAL
+# Weapons
+# lvls 7-9
+#
+wooden_sword_7:
+    name: 'Wooden Sword'
+    type: WOODEN_SWORD
+    data: 0
+    level: 7
+    tier: NORMAL
+short_bow_7:
+    name: 'Short Bow'
+    type: BOW
+    data: 0
+    level: 7
+    tier: NORMAL
+wooden_knife_7:
+    name: 'Wooden Knife'
+    type: SCHEARS
+    data: 0
+    level: 7
+    tier: NORMAL
+wood_wand_7:
+    name: 'Wood Wand'
+    type: STICK
+    data: 0
+    level: 7
+    tier: NORMAL
